apps/nerdd-backend/envs/local/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nerdd-backend
spec:
  template:
    spec:
      containers:
        - name: nerdd-backend
          image: nerdd-backend:latest
